# whatsapp-mcp

./: .dockerignore  Caddyfile.example  LICENSE  README.md  docker-compose.yml
whatsapp-bridge/: .dockerignore  Dockerfile  go.mod
whatsapp-mcp-server/: .dockerignore  Dockerfile  main.py  pyproject.toml  whatsapp.py
