[project]
name = "whatsapp-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.0",
    "requests>=2.32.3",
    "uvicorn>=0.32.0",
    "starlette>=0.41.0",
    "sse-starlette>=2.0.0",
]
